Add admin addition
